# novel_translator

./: .gitignore  README.md  pyproject.toml
data/: item_bind.csv  name_bind.csv
novel_translator/: translator.py
