[tool.poetry]
name = "novel-translator"
version = "0.1.0"
description = ""
authors = ["Hongpei Zheng <zhenghongpei@gmail.com>"]
readme = "README.md"
packages = [{include = "novel_translator"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
httpx = "^0.27.0"
anthropic = "^0.34.1"
universe-ai = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
